--- a/csm/language/language_page.xml
+++ b/csm/language/language_page.xml
@@ -790,7 +790,7 @@
     
     <detail>
         <variable>lb_re_type_capital</variable>
-        <th>ประเภททุน</th>
+        <th>ทุนประกัน</th>
         <en>Capital Type</en>
     </detail>
      <detail>
