--- a/csm/language/language_page.xml
+++ b/csm/language/language_page.xml
@@ -359,6 +359,11 @@
         <th>อีเมลแจ้งเคลมออนไลน์</th>
         <en>Email Claim Online</en>
     </detail>  
+    <detail>
+        <variable>lb_setMail_contacts</variable>
+        <th>อีเมลติดต่อสอบถาม</th>
+        <en>Email Contacts</en>
+    </detail>  
     <!--  config email --> 
     
     
@@ -793,7 +798,7 @@
         <th>ทุนประกัน</th>
         <en>Capital Type</en>
     </detail>
-     <detail>
+    <detail>
         <variable>lb_re_custinfo</variable>
         <th>ข้อมูลลูกค้า</th>
         <en>Customer Info.</en>
